[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2021"
rust-version = "1.83"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
pathfinding = "4.11.0"
num-traits = "0.2.19"
approx = "0.5.1"
itertools = "0.13.0"
regex = "1.11.1"
nohash-hasher = "0.2.0"
lazy_static = "1.5.0"
bimap = "0.6.3"
indexmap = "2.7.0"
rustc-hash = "2.1.0"
